feat: resize textView by default

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/Theme.TextView</item>
+    </style>
+
+    <style name="Theme.TextView" parent="android:Widget.TextView">
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
