--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -136,10 +136,10 @@
                     android:textColor="?attr/colorPrimary" />
 
                 <TextView
-                    android:id="@+id/textView_application_name"
+                    android:id="@+id/textView_application_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/name" />
+                    android:hint="@string/id" />
 
                 <TextView
                     android:id="@+id/textView_application_version"
